ISS-11-17-46 - Fixed internal Nav Spacing

--- a/styles/request-for-starterkit.css
+++ b/styles/request-for-starterkit.css
@@ -203,7 +203,7 @@
 }
 
 @media (min-width: 1024px) and (max-width: 9999px) {
-    [data-module=PageSubnav] .pagesubnavcntr span>button {
+    /* [data-module=PageSubnav] .pagesubnavcntr span>button {
         margin-right: 46px;
-    }
+    } */
 }
